fixed misalignment on carosel

--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,7 @@ img {
 .arrow {
     position: absolute;
     top: 50%;
+    transform: translateY(-50%);
     user-select: none;
     cursor: pointer;
     color: var(--bg);
